--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4254,3 +4254,12 @@ table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
     background-color: #ffff !important;
 }
 /** /bootstrap-datetimepicker **/
+table.treetable span.indenter a {
+    font: normal normal normal 16px/1 FontAwesome;
+}
+table.treetable tr.collapsed span.indenter a::before{
+    content: "\f150";
+}
+table.treetable tr.expanded span.indenter a::before {
+    content: "\f152";
+}
